docs: cleared instructions for mf windows